src/objects/DFC_Alliance__c.object
<CustomObject>
    <description>Dementia Action Alliance</description>
    <fields>
        <fullName>Contact_name__c</fullName>
        <label>Contact name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAA_Id__c</fullName>
        <externalId>true</externalId>
        <label>DAA Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAA_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DAA Region</label>
        <referenceTo>DFC_DAA_Region__c</referenceTo>
        <relationshipLabel>DFC Alliances</relationshipLabel>
        <relationshipName>DFC_Alliances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Alliance Region</description>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>DFC Alliance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>DAA_Region__c</columns>
        <columns>Email__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>DAA_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Dementia Action Alliances</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>Region__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <columns>NAME</columns>
        <columns>DAA_Id__c</columns>
        <columns>Region__c</columns>
        <columns>DAA_Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Alliance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DFC Alliances</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>